@@ -12,10 +12,12 @@ ADD_EXECUTABLE(sound_receiver sound_receiver.cpp)
 ADD_EXECUTABLE(sound_sender_mic sound_sender_mic.cpp)
 ADD_EXECUTABLE(sound_sender_file sound_sender_file.cpp)
 ADD_EXECUTABLE(sound_sender_file_chunks sound_sender_file_chunks.cpp)
+ADD_EXECUTABLE(sound_sender_file_sum sound_sender_file_sum.cpp)
 ADD_EXECUTABLE(sound_loopback sound_loopback.cpp)
 
 TARGET_LINK_LIBRARIES(sound_loopback ${YARP_LIBRARIES})
 TARGET_LINK_LIBRARIES(sound_sender_mic ${YARP_LIBRARIES})
 TARGET_LINK_LIBRARIES(sound_sender_file ${YARP_LIBRARIES})
 TARGET_LINK_LIBRARIES(sound_sender_file_chunks ${YARP_LIBRARIES})
+TARGET_LINK_LIBRARIES(sound_sender_file_sum ${YARP_LIBRARIES})
 TARGET_LINK_LIBRARIES(sound_receiver ${YARP_LIBRARIES})
